[package]
name = "rwc"
authors = ["Lyubomir Kyuchukov"]
license = "MIT"
description = "wc in Rust"
readme = "README.md"
homepage = "https://github.com/you/grrs"
version = "0.2.0"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = "6.1.1"
