[package]
name = "rcw"
authors = ["Lyubomir Kyuchukov"]
license = "MIT"
description = "wc in Rust"
readme = "README.md"
homepage = "https://github.com/lkyuchukov/rcw"
repository = "https://github.com/lkyuchukov/rcw"
keywords = ["cli", "wc"]
categories = ["command-line-utilities"]
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = "6.1.1"
